# dora

./: Cargo.toml  Makefile  README.md
archive/dora-pl/: Cargo.toml
docs/: commands.md  config.md  normal.md  search.md
dora/: Cargo.toml  README.md
dora-explorer/: Cargo.toml  README.md
dora-explorer/src/: lib.rs  main.rs
dora-tui/: Cargo.toml
dora-tui/src/: app.rs  lib.rs
dora/src/: controller.rs  main.rs  runner.rs
dora/src/commands/: controller.rs
dora/src/io/: handler.rs  local.rs
dora/src/io/excel/: reader.rs
dora/src/search/: controller.rs  state.rs
dora/src/table/: table_banner.rs
dora/src/utils/: area.rs  centered_text.rs  debug.rs
jdora/: Cargo.toml
jdora/src/: main.rs
jdora/src/standalone/: app.rs  mod.rs  runner.rs
sample/: a.csv  a.json  a_.json  b.csv  b.jsonl  b.ndjson  b.parquet  b.xlsx  generate.py  generate_multisheet.py  multi_sheet_output.xlsx
src/: app.rs  cell.rs  column.rs  column_ui.rs  config.rs  controller.rs  errors.rs  events.rs  header.rs  input.rs  lib.rs  main.rs  mode.rs  mode_banner.rs  page.rs  runner.rs  table_ui.rs
src/commands/: controller.rs
src/config/: config.rs  dotconfig.rs  mod.rs  serde.rs
src/df/: state.rs
src/dora-explorer/: lib.rs
src/io/: file_type.rs  gcloud.rs  handler.rs  local.rs  mod.rs  path_location.rs
src/search/: approximate_substring_v1.rs  controller.rs  mod.rs  par_search.rs  search.rs  state.rs  substring.rs  traits.rs
src/table/: column_ui.rs  controller.rs  header.rs  line_number_ui.rs  mod.rs  table_banner.rs  table_ui.rs
src/utils/: area.rs  cell.rs  debug.rs  (+5 more)
(+23 files in other folders)
