[package]
name = "dora"
version = "0.1.0"
edition = "2024"

[lib]
name = "dora"
path ="./src/dora/lib.rs"

[lib]
name = "dora-explorer"
path = "./src/dora-explorer/lib.rs"

[[bin]]
name = "dora"
path = "src/bins/dora.rs"

[[bin]]
name = "de"
path = "src/bins/explorer.rs"


[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
polars = { version = "0.46.0", features = ["csv","parquet","json"] }
ratatui = "0.29.0"
rayon = "1.10.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [ "rt", "rt-multi-thread" ] }
tui-input = { version = "0.12", features = ["crossterm"] }
google-cloud-storage = { package = "gcloud-storage", version = "1.1.0" }
directories = "6.0.0"
toml = "0.8.22"
serde = "1.0.219"
calamine = "0.27.0"
